# setup-aptly

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml  requirements-test.txt  test.py
.github/workflows/: ci.yml
scripts/: aptly_publish.py
tests/: __init__.py  test_action.py  test_mock_publish.py  test_utils.py
